--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 nav {
     padding: 10px;
     font-size: 14px;
-    color: #635380;
+    
 }
 nav ul {
     display:flex;
@@ -19,12 +19,13 @@ nav li {
     font-size: 20px;
 }
 
-nav li:hover {
+nav a:hover {
     color: #4F6D7A; 
 }
 
 nav a {
     text-decoration: none;
+    color: #635380;
     
 }
 
